--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "hardhat-project",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.1",
-    "hardhat": "^2.10.0",
     "@nomiclabs/hardhat-ethers": "^2.0.6",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "chai": "^4.3.6",
     "ethereum-waffle": "^3.4.4",
-    "ethers": "^5.6.9"
+    "ethers": "^5.6.9",
+    "hardhat": "^2.10.0"
   },
   "dependencies": {
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
+    "@uniswap/lib": "^4.0.1-alpha",
+    "@uniswap/v2-core": "^1.0.1",
     "hardhat-deploy": "^0.11.10",
     "jest": "^28.1.1",
     "react-toastify": "^9.0.5",
